fix overflow issue

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,8 +1,12 @@
+body{
+    overflow-x: hidden;
+}
 header a{
     text-decoration: none;
     color: white;
 }
 #header {
+    
     position: absolute;
     top: 6%;
     width: 90%;
@@ -12,6 +16,7 @@ header a{
 }
 
 .nav-bar {
+    
     display: flex;
     align-items: center;
     justify-content: space-between;
